Attempt to fix project on mobile view

--- a/style.css
+++ b/style.css
@@ -615,7 +615,9 @@ footer p {
 	.project__container {
 		margin: 1em 1em 2em 1em;
 		padding: 0 1em;
-		width: 80%;
+		width: 18em;
+		width: 80vw;
+		height: 20em;
 	}
 
 	.project__content h2 {
